--- a/installation.yml
+++ b/installation.yml
@@ -77,12 +77,12 @@
    roles:
     - timezone
     - lang  
-    - role: ufw
-      uwf_rules:
-       - rule: allow
-         interface: eth0
-         to_port: 22
-         protocol: tcp
+    #- role: ufw
+    #  uwf_rules:
+    #   - rule: allow
+    #     interface: eth0
+    #     to_port: 22
+    #     protocol: tcp
     - packaging
     #- java
     #- scala
